<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.jetbrains.skija.examples</groupId>
    <artifactId>lwjgl</artifactId>
    <version>0.1.0</version>
    <profiles>
        <profile>
            <id>mac</id>
            <activation>
                <os><family>mac</family></os>
            </activation>
            <properties>
                <lwjgl.natives>natives-macos</lwjgl.natives>
                <skija.artifactId>skija-macos</skija.artifactId>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <activation>
                <os><family>linux</family></os>
            </activation>
            <properties>
                <lwjgl.natives>natives-linux</lwjgl.natives>
                <skija.artifactId>skija-linux</skija.artifactId>
            </properties>
        </profile>
        <profile>
            <id>windows</id>
            <activation>
                <os><family>windows</family></os>
            </activation>
            <properties>
                <lwjgl.natives>natives-windows</lwjgl.natives>
                <skija.artifactId>skija-windows</skija.artifactId>
            </properties>
        </profile>
    </profiles>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <exec.mainClass>org.jetbrains.skija.examples.lwjgl.Main</exec.mainClass>
        <lwjgl.version>3.2.3</lwjgl.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <argument>-classpath</argument>
                        <classpath/>
                        <argument>-XstartOnFirstThread</argument>
                        <argument>-Djava.awt.headless=true</argument>
                        <argument>-ea</argument>
                        <!-- <argument>-XX:+UnlockExperimentalVMOptions</argument> -->
                        <!-- <argument>-XX:+UseShenandoahGC</argument> -->
                        <!-- <argument>-XX:+UseZGC</argument> -->
                        <argument>${exec.mainClass}</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-Xlint:all,-options,-path</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.lwjgl</groupId>
                <artifactId>lwjgl-bom</artifactId>
                <version>${lwjgl.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.jetbrains.skija</groupId>
            <!-- <artifactId>${skija.artifactId}</artifactId> -->
            <artifactId>skija-platform</artifactId>
            <version>0.0.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.12</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-opengl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl</artifactId>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-glfw</artifactId>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
        <dependency>
            <groupId>org.lwjgl</groupId>
            <artifactId>lwjgl-opengl</artifactId>
            <classifier>${lwjgl.natives}</classifier>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>space-maven</id>
            <url>https://packages.jetbrains.team/maven/p/skija/maven</url>
        </repository>
    </repositories>
</project>
